DemoMyApp/src/objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>Alpha_2__c</fullName>
        <externalId>true</externalId>
        <label>Alpha 2</label>
        <length>2</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Alpha_3__c</fullName>
        <label>Alpha 3</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Calling_Code__c</fullName>
        <label>Calling Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country_Code_for_PaytoStudy__c</fullName>
        <label>Country Code for PaytoStudy</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Len_CC__c</fullName>
        <formula>Calling_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Len CC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_Lower_Case__c</fullName>
        <formula>LOWER(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name (Lower Case)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lat Am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nor Am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eurasia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lat Am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nor Am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rest of Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rest of MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Europe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Alpha_2__c</columns>
        <columns>Alpha_3__c</columns>
        <columns>Calling_Code__c</columns>
        <columns>Name_Lower_Case__c</columns>
        <columns>Region__c</columns>
        <columns>Sub_Region__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>